# asim

./: README.md
aloha/: README.md  aloha.cabal
aloha/src/: Main.hs
arq/: README.md  arq.cabal
arq/src/: Main.hs
s-aloha/: README.md  s-aloha.cabal
s-aloha/src/: Main.hs
