name:                aloha
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/avras/asim/aloha
license:             MIT
license-file:        LICENSE
author:              Saravanan Vijayakumaran
maintainer:          sarva@ee.iitb.ac.in
copyright:           2018 Saravanan Vijayakumaran
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aloha
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.2
                     , sorted-list >= 0.2
                     , mwc-random >= 0.13.6
